  * g++-multilib on amd64 depends on libc6-dev-i386, no need to specify both
    as build dependency.

  [ Hilko Bengen ]
  * Make dh_strip ignore symlink(s) in /usr/share

  [ Daniel Baumann ]
  * Again fixing dpatch headers.
  * Again removing reimported useless whitespaces at EOL and EOF in debian/*.
  * Correcting the name of Phillip in copyright.

 -- Michael Meskes <meskes@debian.org>  Sat, 29 Dec 2007 14:52:41 +0100

virtualbox-ose (1.5.2-dfsg2-7) unstable; urgency=low

  [ Patrick Winnertz ]
  * Do only recommend the virtualbox-ose-modules package. Maybe someone
    would like to compile it on it's own, or not with m-a. (Closes: #456989)

  [ Hilko Bengen ]
  * Build system: a large move towards using dh_install
    - This requires that we force the build output dir to a fixed location.
    - The dh_install call needs to go to the `install' target.
  * Leave out code/data for test cases from virtualbox-ose binary package

  [ Michael Meskes ]
  * Only suggest guest-sources in guest-utils. With l-m-e expected to include
    the guest-modules in the near future, this should be sufficient.
  * Rearranged parts of the debian dir.
  * Replaced our patch to not need kernel sources by new configure option
    taken from svn.

  [ Daniel Baumann ]
  * Bumping policy also in module controls, no other changes needed.

 -- Michael Meskes <meskes@debian.org>  Thu, 20 Dec 2007 15:51:13 +0100

virtualbox-ose (1.5.2-dfsg2-6) unstable; urgency=low

  [ Daniel Baumann ]
  * Again removing reimported useless whitespaces at EOL and EOF in debian/*.
  * Fixing dpatch headers.
  * Rediffed dpatches 6-12.
  * Removed svn:executable on dpatch 9 and 12.

  [ Michael Meskes ]
  * Fixed rules file to correctly install module sources, closes: #456916

 -- Michael Meskes <meskes@debian.org>  Tue, 18 Dec 2007 16:21:33 +0100

virtualbox-ose (1.5.2-dfsg2-5) unstable; urgency=low

  [ Daniel Baumann ]
  * Upgrading virtualbox-ose-modules recommends to depends.